2007-04-22	Marcus Meissner <marcus@jet.franken.de>

	* *-desc.c: Removed "const" from some structures that 
	  are written to by the configuration handling code.

2007-02-13	Chandra Curtis <chandracurtis@ntu.edu.sg>
	*sierra.c, sierra-desc.h, olympus-desc.c: Added support for Olympus SP-500UZ.  
	(Works with gtkam, still some issue with gphoto2)

2006-08-08  Marcus Meissner  <marcus@jet.franken.de>

	* sierra.c: Added Nikon CoolPix 2100, from
	  Ken Restivo <ken@restivo.org>.

2005-09-26  Marcus Meissner  <marcus@jet.franken.de>

	* sierra-desc.c: Fixed 2 strict aliasing problems.

2005-08-04  Marcus Meissner  <marcus@jet.franken.de>
	
	* sierra.c: epson photopc 700 has no reg 51 either

2005-07-07  Marcus Meissner  <marcus@jet.franken.de>

	* sierra.c: Moved new Olympus entries prodid 0x109 here (from ptp2).

2005-06-10  Marcus Meissner  <marcus@jet.franken.de>

	* sierra.c: Added Nikon Coolpix 4300 in wrapper modce.

2005-05-30  Marcus Meissner  <marcus@jet.franken.de>

	* sierra.c: Sanyo VPC G250 does not have register 51.

2005-05-08  Marcus Meissner  <marcus@jet.franken.de>
	
	* sierra.c: The olympus c-420l does only like
	  speeds up to 57600.
	  The epson photopc 650 does only like up to 38400.

2005-02-27  Marcus Meissner  <marcus@jet.franken.de>

	Aurelien Jarno <aurelien@aurel32.net>
	* library.c: Increase buffer size to the one we will try to
	  to read. Newer libusb and kernels give more than 4k back to
	  read()s.

	  Debian bug#296708.

2005-02-16  Marcus Meissner  <marcus@jet.franken.de>
	
	* sierra.c: Added Pentax Optio 450. Thanks to Jack
	  for lending me his camera for some minutes. :)
	  (Capture works, but only if you plug it in with the lens
	   extracted already.)

2005-02-14  Marcus Meissner <marcus@jet.franken.de>
	* library.c, sierra-desc.h, sierra.c, sierra.h, sierra-usbwrap.c:
	  Nikon Coolpix * and Pentax cameras also support the Sierra 
	  protocol (usb wrapped), however with different command bytes.
