@@ -1,3 +1,7 @@
+2008-09-20	Marcus Meissner <marcus@jet.franken.de>
+
+	* sierra.c: Implement storage_info function.
+
 2007-04-22	Marcus Meissner <marcus@jet.franken.de>
 
 	* *-desc.c: Removed "const" from some structures that 
